tests/paczka1/small_fuzzy/15670571.err
Error in line 5: 45bqI S268 -1,6
Error in line 4: 45bqI S268 21,0
Error in line 8: jXy8dZqa9dl A432 57,3
